--- a/index.html
+++ b/index.html
@@ -1,46 +1,269 @@
-Política de Privacidade
-Esta página é usada para informar os visitantes sobre nossa política de privacidade com a coleta, uso e divulgação de Informações Pessoais se alguém decidir usar o nosso aplicativo Geo Levantamento.
-Se você optar por usar o nosso aplicativo, concorda com a coleta e uso de informações em relação a esta política. As Informações Pessoais que coletamos são usadas para fornecer e melhorar o Serviço. Nós não usaremos ou compartilharemos suas informações com ninguém, exceto conforme descrito nesta Política de Privacidade.
+<!DOCTYPE html>
 
-Coleta e uso de informações
-Para uma melhor experiência, ao usar nosso serviço, nós podemos exigir que você nos forneça certas informações de identificação pessoal: 
-•	Nome de usuário 
-•	Endereço
-•	Localização
-•	Fotos
-•	Armazenamento
- As informações que iremos solicitar serão retidas por nós e usada conforme descrito nesta política de privacidade.
-O aplicativo usa serviços de terceiros que podem coletar informações usadas para identificá-lo.
-Link para a política de privacidade de provedores de serviços terceirizados usados pelo aplicativo
-•	Serviços do Google Play
-Dados de registro
-Queremos informar que sempre que você usar o nosso serviço, em caso de erro no aplicativo coletamos dados e informações (através de produtos de terceiros) em seu telefone chamado Log Dados. Esses Dados de Registro podem incluir informações como o endereço do Protocolo de Internet (“IP”) do seu dispositivo, nome do dispositivo, versão do sistema operacional, a configuração do aplicativo ao utilizar nosso aplicativo, a hora e a data do uso do serviço e outras estatísticas.
+<html>
 
-Cookies 
-Cookies são arquivos com uma pequena quantidade de dados que são comumente usados como identificadores exclusivos anônimos. Eles são enviados para o seu navegador a partir dos sites que você visita e são armazenados na memória interna do seu dispositivo. Este serviço não usa esses “cookies” explicitamente. No entanto, o aplicativo pode usar código de terceiros e bibliotecas que usam “cookies” para coletar informações e melhorar seus serviços. Você tem a opção de aceitar ou recusar esses cookies e saber quando um cookie está sendo enviado ao seu dispositivo. Se você optar por recusar nossos cookies, talvez não consiga usar algumas partes deste serviço.
+<head>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width'>
+    <title>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">Política de Privacidade</font>
+        </font>
+    </title>
+    <style>
+        body {
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            padding: 1em;
+        }
+    </style>
+</head>
 
-Provedores de serviço
-Podemos empregar empresas e indivíduos terceirizados devido aos seguintes motivos:
-•	Para facilitar nosso serviço;
-•	Para fornecer o serviço em nosso nome;
-•	Para executar serviços relacionados ao serviço; ou
-•	Para nos ajudar a analisar como nosso serviço é usado.
-Informamos aos usuários deste aplicativo que esses terceiros têm acesso às suas Informações Pessoais. O motivo é realizar as tarefas atribuídas a eles em nosso nome. No entanto, eles são obrigados a não divulgar ou usar as informações para qualquer outra finalidade.
+<body>
+    <strong><font style="vertical-align: inherit;"><font
+                    style="vertical-align: inherit;">Política de Privacidade</font></font></strong>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                    inherit;">
+                Esta página é usada para informar os visitantes sobre nossa política de privacidade com a coleta, </font>
+            <font style="vertical-align: inherit;">uso e divulgação de Informações Pessoais se alguém decidir usar o nosso aplicativo Geo Levantamento.
+            </font>
+        </font>
 
-Segurança
-Valorizamos sua confiança em nos fornecer suas Informações Pessoais, portanto, estamos nos esforçando para usar meios comercialmente aceitáveis de protegê-las. Mas lembre-se de que nenhum método de transmissão pela Internet ou método de armazenamento eletrônico é 100% seguro e confiável, e não podemos garantir sua segurança absoluta.
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">
+                Se você optar por usar o nosso aplicativo, concorda com a coleta e uso de informações em relação a esta política.
+            </font>
+            <font style="vertical-align: inherit;">As Informações Pessoais que coletamos são usadas para fornecer e melhorar o serviço.
+            </font>
+            <font style="vertical-align:
+                    inherit;">Nós não usaremos ou compartilharemos suas informações com ninguém, exceto conforme descrito nesta Política de Privacidade.
+            </font>
+        </font>
+    </p>
+    <p><strong><font style="vertical-align:
+                    inherit;"><font style="vertical-align: inherit;">Coleta e
+                        uso de informações</font></font></strong></p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                    inherit;">
+                Para uma melhor experiência, ao usar nosso serviço, nós podemos exigir que você nos forneça certas informações de identificação pessoal:
+                <ul>
+                    <li>
+                        <font style="vertical-align: inherit;">
+                            Nome de Usuário,
+                        </font>
+                    </li>
+                    <li>
+                        <font style="vertical-align: inherit;">
+                            Endereço,
+                        </font>
+                    </li>
+                    <li>
+                        <font style="vertical-align: inherit;">
+                            Localização,
+                        </font>
+                    </li>
+                    <li>
+                        <font style="vertical-align: inherit;">
+                            Fotos,
+                        </font>
+                    </li>
+                    <li>
+                        <font style="vertical-align: inherit;">
+                            Armazenamento,
+                        </font>
+                    </li>
+                </ul>
+                As informações que iremos solicitar serão retidas por nós e usada conforme descrito nesta política de privacidade.
+            </font>
+        </font>
+    </p>
+    <div>
+        <p>
+            <font style="vertical-align:
+                    inherit;">
+                <font style="vertical-align: inherit;">
+                    O aplicativo usa serviços de terceiros que podem coletar informações usadas para identificá-lo.
+                </font>
+            </font>
+        </p>
+        <p>
+            <font style="vertical-align:
+                    inherit;">
+                <font style="vertical-align: inherit;">
+                    Link para a política de privacidade de provedores de serviços terceirizados usados pelo aplicativo:
+                </font>
+            </font>
+        </p>
+        <ul>
+            <li>
+                <a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">
+                    <font style="vertical-align: inherit;">
+                        <font style="vertical-align: inherit;">Serviços do Google Play</font>
+                    </font>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <p><strong><font style="vertical-align: inherit;"><font
+                        style="vertical-align: inherit;">Dados de registro</font></font></strong></p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                    inherit;">
+                Queremos informar que sempre que você usar o nosso serviço, em caso de erro no aplicativo coletamos dados e informações (através de produtos de terceiros) em seu telefone chamado Log Dados. </font>
+            <font style="vertical-align: inherit;">Esses Dados de Registro podem incluir informações como o endereço do Protocolo de Internet (“IP”) do seu dispositivo, nome do dispositivo, versão do sistema operacional, a configuração do aplicativo ao utilizar nosso aplicativo, a hora e a
+                data do uso do serviço e outras estatísticas.
+            </font>
+        </font>
+    </p>
+    <p><strong><font style="vertical-align:
+                    inherit;"><font style="vertical-align: inherit;">Cookies
+                    </font></font></strong></p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                    inherit;">
+                Cookies são arquivos com uma pequena quantidade de dados que são comumente usados como identificadores exclusivos anônimos. </font>
+            <font style="vertical-align: inherit;">Eles são enviados para o seu navegador a partir dos sites que você visita e são armazenados na memória interna do seu dispositivo.
+            </font>
+        </font>
+    </p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">
+                Este aplicativo não usa esses “cookies” explicitamente.
+            </font>
+            <font style="vertical-align: inherit;">No entanto, o aplicativo pode usar código de terceiros e bibliotecas que usam “cookies” para coletar informações e melhorar seus serviços.
+            </font>
+            <font style="vertical-align: inherit;">Você tem a opção de aceitar ou recusar esses cookies e saber quando um cookie está sendo enviado ao seu dispositivo. </font>
+            <font style="vertical-align: inherit;">Se você optar por recusar nossos cookies, talvez não consiga usar algumas partes deste serviço.
+            </font>
+        </font>
+    </p>
+    <p><strong><font style="vertical-align:
+                    inherit;"><font style="vertical-align: inherit;">Provedores
+                        de Serviço</font></font></strong></p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                    inherit;">
+                Podemos empregar empresas e indivíduos terceirizados devido aos seguintes motivos:
+            </font>
+        </font>
+    </p>
+    <ul>
+        <li>
+            <font style="vertical-align:
+                    inherit;">
+                <font style="vertical-align: inherit;">Para facilitar nosso Serviço;
+                </font>
+            </font>
+        </li>
+        <li>
+            <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;">Para fornecer o Serviço em nosso nome;</font>
+            </font>
+        </li>
+        <li>
+            <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;">Para executar serviços relacionados ao Serviço; </font>
 
-Links para outros sites
-Este Serviço pode conter links para outros sites. Se você clicar em um link de terceiros, será direcionado para esse site. Observe que esses sites externos não são operados por nos. Portanto, recomendamos que você revise a Política de Privacidade desses sites. Não temos controle e não assumimos responsabilidade pelo conteúdo, políticas de privacidade ou práticas de quaisquer sites ou serviços de terceiros.
+        </li>
+        <li>
+            <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;">Para nos ajudar a analisar como nosso Serviço é usado.</font>
+            </font>
+        </li>
+    </ul>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                        inherit;">
+                Informamos aos usuários deste aplicativo que esses terceiros têm acesso às suas Informações Pessoais.
+            </font>
+            <font style="vertical-align: inherit;">O motivo é realizar as tarefas atribuídas a eles em nosso nome. </font>
+            <font style="vertical-align: inherit;">No entanto, eles são obrigados a não divulgar ou usar as informações para qualquer outra finalidade.
+            </font>
+        </font>
+    </p>
+    <p><strong><font style="vertical-align:
+                        inherit;"><font style="vertical-align: inherit;">Segurança</font></font></strong></p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                        inherit;">
+                Valorizamos sua confiança em nos fornecer suas Informações Pessoais, portanto, estamos nos esforçando para usar meios comercialmente aceitáveis de protegê-las.
+            </font>
+            <font style="vertical-align: inherit;">Mas lembre-se de que nenhum método de transmissão pela Internet ou método de armazenamento eletrônico é 100% seguro e confiável, e não podemos garantir sua segurança absoluta.
+            </font>
+        </font>
+    </p>
+    <p><strong><font style="vertical-align:
+                        inherit;"><font style="vertical-align: inherit;">Links
+                            para
+                            outros sites</font></font></strong></p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                        inherit;">
+                Este Serviço pode conter links para outros sites.
+            </font>
+            <font style="vertical-align: inherit;">Se você clicar em um link de terceiros, será direcionado para esse site.
+            </font>
+            <font style="vertical-align: inherit;">Observe que esses sites externos não são operados por nos. </font>
+            <font style="vertical-align: inherit;">Portanto, recomendamos que você revise a Política de Privacidade desses sites. </font>
+            <font style="vertical-align: inherit;">Não temos controle e não assumimos responsabilidade pelo conteúdo, políticas de privacidade ou práticas de quaisquer sites ou serviços de terceiros.
+            </font>
+        </font>
+    </p>
+    <p><strong><font style="vertical-align:
+                        inherit;"><font style="vertical-align: inherit;">Privacidade
+                            infantil</font></font></strong></p>
+    <div>
+        <p>
+            <font style="vertical-align: inherit;">
+                <font style="vertical-align: inherit;">
+                    Esses aplicativo não atende a menores de 13 anos. Não coletamos intencionalmente informações de identificação pessoal de crianças menores de 13 anos.
+                </font>
+                <font style="vertical-align: inherit;">No caso de descobrirmos que uma criança menor de 13 anos forneceu a nos informações pessoais, imediatamente iremos excluir de nossos servidores. </font>
+                <font style="vertical-align: inherit;">Se você é pai ou responsável e está ciente de que seu filho nos forneceu informações pessoais, entre em contato conosco para que possamos tomar as medidas necessárias.
+                </font>
+            </font>
+        </p>
+    </div>
+    <p><strong><font
+                        style="vertical-align: inherit;"><font
+                            style="vertical-align: inherit;">Alterações nesta
+                            Política de Privacidade</font></font></strong></p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                        inherit;">
+                Podemos atualizar nossa Política de Privacidade constantemente. </font>
+            <font style="vertical-align:
+                        inherit;">Assim, recomendamos que você revise esta página periodicamente para quaisquer alterações. </font>
+        </font>
+    </p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align: inherit;">Esta política é efetiva a partir de 22/03/2022</font>
+        </font>
+    </p>
+    <p><strong><font
+                        style="vertical-align: inherit;"><font
+                            style="vertical-align: inherit;">Contato</font></font></strong></p>
+    <p>
+        <font style="vertical-align: inherit;">
+            <font style="vertical-align:
+                        inherit;">
+                Se você tiver alguma dúvida ou sugestão sobre a nossa Política de Privacidade, não hesite em entrar em contato conosco em suporte@wcogeo.com.br.
+            </font>
+        </font>
+    </p>
 
+</body>
 
-Privacidade infantil
-Esses Serviços não atendem a menores de 13 anos. Não coletamos intencionalmente informações de identificação pessoal de crianças menores de 13 anos. No caso de descobrirmos que uma criança menor de 13 anos forneceu a informações pessoais, iremos imediatamente as excluir de nossos servidores. Se você é pai ou responsável e está ciente de que seu filho nos forneceu informações pessoais, entre em contato conosco para que possamos tomar as medidas necessárias.
-
-
-Alterações nesta Política de Privacidade
-Podemos atualizar nossa Política de Privacidade periodicamente. Assim, recomendamos que você revise esta página periodicamente para quaisquer alterações. 
-Esta política é efetiva a partir de 23/03/2022
-
-Contate-Nos
-Se você tiver alguma dúvida ou sugestão sobre a nossa Política de Privacidade, não hesite em entrar em contato conosco em suporte@wcogeo.com.br. 
+</html>
