Atualização Politica de Privacidade

--- a/index.html
+++ b/index.html
@@ -1,62 +1,46 @@
-
 Política de Privacidade
-[Developer/Company name] construiu o aplicativo Geo Levantamento como aplicativo [open source/free/freemium/ad-supported/commercial]. Este SERVIÇO é fornecido pelo [Desenvolvedor/Nome da empresa] [sem custo] e destina-se ao uso como está.
-
-Esta página é usada para informar os visitantes sobre [minhas/nossas] políticas com a coleta, uso e divulgação de Informações Pessoais se alguém decidir usar [meu/nosso] Serviço.
-
-Se você optar por usar o Serviço [meu/nosso], concorda com a coleta e uso de informações em relação a esta política. As Informações Pessoais que [Eu/Nós] coletamos são usadas para fornecer e melhorar o Serviço. [Eu/Nós] não usaremos ou compartilharemos suas informações com ninguém, exceto conforme descrito nesta Política de Privacidade.
-
-Os termos utilizados nesta Política de Privacidade têm os mesmos significados que nos nossos Termos e Condições, que estão acessíveis em Geo Levantamento, salvo definição em contrário nesta Política de Privacidade.
+Esta página é usada para informar os visitantes sobre nossa política de privacidade com a coleta, uso e divulgação de Informações Pessoais se alguém decidir usar o nosso aplicativo Geo Levantamento.
+Se você optar por usar o nosso aplicativo, concorda com a coleta e uso de informações em relação a esta política. As Informações Pessoais que coletamos são usadas para fornecer e melhorar o Serviço. Nós não usaremos ou compartilharemos suas informações com ninguém, exceto conforme descrito nesta Política de Privacidade.
 
 Coleta e uso de informações
-
-Para uma melhor experiência, ao usar nosso Serviço, [I/Nós] podemos exigir que você nos forneça certas informações de identificação pessoal [adicione qualquer outra coisa que você coletar aqui, por exemplo, nome de usuário, endereço, localização, fotos] As informações que [I/ Nós] solicitação será [retida em seu dispositivo e não é coletada por [eu/nós] de forma alguma]/[retida por nós e usada conforme descrito nesta política de privacidade].
-
+Para uma melhor experiência, ao usar nosso serviço, nós podemos exigir que você nos forneça certas informações de identificação pessoal: 
+•	Nome de usuário 
+•	Endereço
+•	Localização
+•	Fotos
+•	Armazenamento
+ As informações que iremos solicitar serão retidas por nós e usada conforme descrito nesta política de privacidade.
 O aplicativo usa serviços de terceiros que podem coletar informações usadas para identificá-lo.
-
 Link para a política de privacidade de provedores de serviços terceirizados usados pelo aplicativo
-
-Serviços do Google Play
+•	Serviços do Google Play
 Dados de registro
+Queremos informar que sempre que você usar o nosso serviço, em caso de erro no aplicativo coletamos dados e informações (através de produtos de terceiros) em seu telefone chamado Log Dados. Esses Dados de Registro podem incluir informações como o endereço do Protocolo de Internet (“IP”) do seu dispositivo, nome do dispositivo, versão do sistema operacional, a configuração do aplicativo ao utilizar nosso aplicativo, a hora e a data do uso do serviço e outras estatísticas.
 
-[Eu/Nós] queremos informar que sempre que você usar o Serviço [meu/nosso], em caso de erro no aplicativo [Eu/Nós] coletamos dados e informações (através de produtos de terceiros) em seu telefone chamado Log Dados. Esses Dados de Registro podem incluir informações como o endereço do Protocolo de Internet (“IP”) do seu dispositivo, nome do dispositivo, versão do sistema operacional, a configuração do aplicativo ao utilizar o Serviço [meu/nosso], a hora e a data do uso do Serviço , e outras estatísticas.
-
-Biscoitos
-
-Cookies são arquivos com uma pequena quantidade de dados que são comumente usados como identificadores exclusivos anônimos. Eles são enviados para o seu navegador a partir dos sites que você visita e são armazenados na memória interna do seu dispositivo.
-
-Este Serviço não usa esses “cookies” explicitamente. No entanto, o aplicativo pode usar código de terceiros e bibliotecas que usam “cookies” para coletar informações e melhorar seus serviços. Você tem a opção de aceitar ou recusar esses cookies e saber quando um cookie está sendo enviado ao seu dispositivo. Se você optar por recusar nossos cookies, talvez não consiga usar algumas partes deste Serviço.
+Cookies
+Cookies são arquivos com uma pequena quantidade de dados que são comumente usados como identificadores exclusivos anônimos. Eles são enviados para o seu navegador a partir dos sites que você visita e são armazenados na memória interna do seu dispositivo. Este serviço não usa esses “cookies” explicitamente. No entanto, o aplicativo pode usar código de terceiros e bibliotecas que usam “cookies” para coletar informações e melhorar seus serviços. Você tem a opção de aceitar ou recusar esses cookies e saber quando um cookie está sendo enviado ao seu dispositivo. Se você optar por recusar nossos cookies, talvez não consiga usar algumas partes deste serviço.
 
 Provedores de serviço
-
-[Eu/Nós] podemos empregar empresas e indivíduos terceirizados devido aos seguintes motivos:
-
-Para facilitar nosso Serviço;
-Para fornecer o Serviço em nosso nome;
-Para executar serviços relacionados ao Serviço; ou
-Para nos ajudar a analisar como nosso Serviço é usado.
-[Eu/Nós] queremos informar aos usuários deste Serviço que esses terceiros têm acesso às suas Informações Pessoais. O motivo é realizar as tarefas atribuídas a eles em nosso nome. No entanto, eles são obrigados a não divulgar ou usar as informações para qualquer outra finalidade.
+Podemos empregar empresas e indivíduos terceirizados devido aos seguintes motivos:
+•	Para facilitar nosso serviço;
+•	Para fornecer o serviço em nosso nome;
+•	Para executar serviços relacionados ao serviço; ou
+•	Para nos ajudar a analisar como nosso serviço é usado.
+Informamos aos usuários deste aplicativo que esses terceiros têm acesso às suas Informações Pessoais. O motivo é realizar as tarefas atribuídas a eles em nosso nome. No entanto, eles são obrigados a não divulgar ou usar as informações para qualquer outra finalidade.
 
 Segurança
-
-[Eu/Nós] valorizamos sua confiança em nos fornecer suas Informações Pessoais, portanto, estamos nos esforçando para usar meios comercialmente aceitáveis de protegê-las. Mas lembre-se de que nenhum método de transmissão pela Internet ou método de armazenamento eletrônico é 100% seguro e confiável, e [Eu/Nós] não podemos garantir sua segurança absoluta.
+Valorizamos sua confiança em nos fornecer suas Informações Pessoais, portanto, estamos nos esforçando para usar meios comercialmente aceitáveis de protegê-las. Mas lembre-se de que nenhum método de transmissão pela Internet ou método de armazenamento eletrônico é 100% seguro e confiável, e não podemos garantir sua segurança absoluta.
 
 Links para outros sites
+Este Serviço pode conter links para outros sites. Se você clicar em um link de terceiros, será direcionado para esse site. Observe que esses sites externos não são operados por nos. Portanto, recomendamos que você revise a Política de Privacidade desses sites. Não temos controle e não assumimos responsabilidade pelo conteúdo, políticas de privacidade ou práticas de quaisquer sites ou serviços de terceiros.
 
-Este Serviço pode conter links para outros sites. Se você clicar em um link de terceiros, será direcionado para esse site. Observe que esses sites externos não são operados por [me/us]. Portanto, [eu/nós] recomendamos que você revise a Política de Privacidade desses sites. [Eu/Nós] não temos controle e não assumimos responsabilidade pelo conteúdo, políticas de privacidade ou práticas de quaisquer sites ou serviços de terceiros.
 
 Privacidade infantil
+Esses Serviços não atendem a menores de 13 anos. Não coletamos intencionalmente informações de identificação pessoal de crianças menores de 13 anos. No caso de descobrirmos que uma criança menor de 13 anos forneceu a informações pessoais, iremos imediatamente as excluir de nossos servidores. Se você é pai ou responsável e está ciente de que seu filho nos forneceu informações pessoais, entre em contato conosco para que possamos tomar as medidas necessárias.
 
-Esses Serviços não atendem a menores de 13 anos. [Eu/Nós] não coletamos intencionalmente informações de identificação pessoal de crianças menores de 13 anos. No caso de [eu/nós] descobrirmos que uma criança menor de 13 anos forneceu a [me/nós] informações pessoais, [eu/nós] imediatamente as excluímos de nossos servidores. Se você é pai ou responsável e está ciente de que seu filho nos forneceu informações pessoais, entre em contato com [eu/nós] para que [eu/nós] possamos tomar as medidas necessárias.
 
 Alterações nesta Política de Privacidade
-
-[Eu/Nós] podemos atualizar nossa Política de Privacidade de tempos em tempos. Assim, recomendamos que você revise esta página periodicamente para quaisquer alterações. [Eu/Nós] iremos notificá-lo sobre quaisquer alterações publicando a nova Política de Privacidade nesta página.
-
+Podemos atualizar nossa Política de Privacidade periodicamente. Assim, recomendamos que você revise esta página periodicamente para quaisquer alterações. 
 Esta política é efetiva a partir de 22/03/2022
 
 Contate-Nos
-
-Se você tiver alguma dúvida ou sugestão sobre a [minha/nossa] Política de Privacidade, não hesite em entrar em contato com [me/nós] em suporte@wcogeo.com.br.
-
-Esta página de política de privacidade foi criada em privacypolicytemplate.net e modificada/gerada pelo App Privacy Policy Generator
+Se você tiver alguma dúvida ou sugestão sobre a nossa Política de Privacidade, não hesite em entrar em contato conosco em suporte@wcogeo.com.br. 
